feat: 新增清理缓存的定时任务

--- a/apps/blog/templates/blog/health.html
+++ b/apps/blog/templates/blog/health.html
@@ -164,7 +164,7 @@
                     tooltip: {
                         trigger: 'axis',
                         axisPointer: {
-                            type: 'cross'
+                            type: 'none'
                         },
                         formatter: function (params) {
                             let result = params[0].axisValue + '<br/>';
@@ -226,6 +226,7 @@
                             type: 'value',
                             name: '步频',
                             min: 150,
+                            max: 200,
                             position: 'right',
                             alignTicks: true,
                             offset: 60,
@@ -243,6 +244,7 @@
                             type: 'value',
                             name: '心率',
                             min: 130,
+                            max: 180,
                             position: 'right',
                             alignTicks: true,
                             axisLine: {
@@ -304,6 +306,8 @@
                         {
                             type: 'value',
                             name: '步长',
+                            min: 0.5,
+                            max: 1.2,
                             position: 'left',
                             show: false,
                             alignTicks: true,
