feat: 新增清理缓存的定时任务

--- a/apps/blog/templates/blog/health.html
+++ b/apps/blog/templates/blog/health.html
@@ -84,8 +84,13 @@
                             '#9eca7f'
                         ],
                         textStyle: {color: echartsTheme.titleColor},
-                        min: 3000,
-                        max: 8000,
+                        pieces: [
+                            {min: 7000, max: 7999, label: '7000-8000'},  // 区间：大于等于7000，小于6000
+                            {min: 6000, max: 6999, label: '6000-7000'},  // 区间：大于等于6000，小于7000
+                            {min: 5000, max: 5999, label: '5000-6000'},  // 区间：大于等于5000，小于6000
+                            {min: 4000, max: 4999, label: '4000-5000'},  // 区间：大于等于4000，小于5000
+                            {min: 3000, max: 3999, label: '3000-4000'}   // 区间：大于等于3000，小于4000
+                        ],
                         type: 'piecewise',
                         orient: 'horizontal',
                         left: 'center',
