--- a/apps/blog/templates/blog/health.html
+++ b/apps/blog/templates/blog/health.html
@@ -65,7 +65,9 @@
                     },
                     toolbox: {
                         feature: {
-                            saveAsImage: {}
+                            dataView: {show: true, readOnly: false},
+                            restore: {show: true},
+                            saveAsImage: {show: true}
                         }
                     },
                     tooltip: {
@@ -402,10 +404,10 @@
                         '#ea7ccc'
                     ],
                     toolbox: {
-                        show: true,
                         feature: {
-                            magicType: {type: ['line', 'bar']},
-                            saveAsImage: {}
+                            dataView: {show: true, readOnly: false},
+                            restore: {show: true},
+                            saveAsImage: {show: true}
                         }
                     },
                     tooltip: {
@@ -533,10 +535,10 @@
                     backgroundColor: echartsTheme.backgroundColor,
                     {#color: ['#3ba272', '#9a60b4', '#f38b53', '#fac858'],#}
                     toolbox: {
-                        show: true,
                         feature: {
-                            magicType: {type: ['line', 'bar']},
-                            saveAsImage: {}
+                            dataView: {show: true, readOnly: false},
+                            restore: {show: true},
+                            saveAsImage: {show: true}
                         }
                     },
                     tooltip: {
@@ -655,10 +657,10 @@
                     backgroundColor: echartsTheme.backgroundColor,
                     {#color: ['#3ba272', '#9a60b4', '#f38b53', '#fac858'],#}
                     toolbox: {
-                        show: true,
                         feature: {
-                            magicType: {type: ['line', 'bar']},
-                            saveAsImage: {}
+                            dataView: {show: true, readOnly: false},
+                            restore: {show: true},
+                            saveAsImage: {show: true}
                         }
                     },
                     tooltip: {
@@ -809,10 +811,10 @@
                     backgroundColor: echartsTheme.backgroundColor,
                     {#color: ['#3ba272', '#9a60b4', '#f38b53', '#fac858'],#}
                     toolbox: {
-                        show: true,
                         feature: {
-                            magicType: {type: ['line', 'bar']},
-                            saveAsImage: {}
+                            dataView: {show: true, readOnly: false},
+                            restore: {show: true},
+                            saveAsImage: {show: true}
                         }
                     },
                     tooltip: {
