feat: 新增json转yaml工具

--- a/apps/tool/templates/tool/json2yaml.html
+++ b/apps/tool/templates/tool/json2yaml.html
@@ -35,7 +35,7 @@
     <!-- 结果显示文本框 -->
     <h4>结果文本</h4>
     <div class="input-group mb-3">
-        <textarea class="form-control" id="output_text" rows="7" readonly placeholder="转换结果显示在此"></textarea>
+        <textarea class="form-control" id="output_text" rows="7" placeholder="转换结果显示在此"></textarea>
     </div>
     <p class="small">注：请确保输入的内容为有效的JSON或YAML格式</p>
 
