--- a/apps/blog/templates/blog/health.html
+++ b/apps/blog/templates/blog/health.html
@@ -79,6 +79,7 @@
                     },
                     visualMap: {
                         color: [
+                            '#ea7ccc',
                             '#9a60b4',
                             '#5a6fc0',
                             '#85bedb',
@@ -87,6 +88,7 @@
                         ],
                         textStyle: {color: echartsTheme.titleColor},
                         pieces: [
+                            {min: 8000, max: 9999, label: '8000-10000'},
                             {min: 7000, max: 7999, label: '7000-8000'},  // 区间：大于等于7000，小于6000
                             {min: 6000, max: 6999, label: '6000-7000'},  // 区间：大于等于6000，小于7000
                             {min: 5000, max: 5999, label: '5000-6000'},  // 区间：大于等于5000，小于6000
