--- a/apps/blog/templates/blog/health.html
+++ b/apps/blog/templates/blog/health.html
@@ -267,6 +267,7 @@
                         {
                             type: 'value',
                             name: '配速',
+                            inverse: true,
                             min: 5,
                             position: 'left',
                             offset: 60,
@@ -702,6 +703,7 @@
                     xAxis: {type: 'category'},
                     yAxis: {
                         type: 'value',
+                        inverse: true,
                         min: 5,
                         axisLabel: {
                             formatter: function (value) {
