--- a/apps/blog/templates/blog/health.html
+++ b/apps/blog/templates/blog/health.html
@@ -79,8 +79,8 @@
                     },
                     visualMap: {
                         color: [
-                            '#ea7ccc',
                             '#9a60b4',
+                            '#ea7ccc',
                             '#5a6fc0',
                             '#85bedb',
                             '#749f83',
@@ -89,11 +89,11 @@
                         textStyle: {color: echartsTheme.titleColor},
                         pieces: [
                             {min: 8000, max: 9999, label: '8000-10000'},
-                            {min: 7000, max: 7999, label: '7000-8000'},  // 区间：大于等于7000，小于6000
-                            {min: 6000, max: 6999, label: '6000-7000'},  // 区间：大于等于6000，小于7000
-                            {min: 5000, max: 5999, label: '5000-6000'},  // 区间：大于等于5000，小于6000
-                            {min: 4000, max: 4999, label: '4000-5000'},  // 区间：大于等于4000，小于5000
-                            {min: 3000, max: 3999, label: '3000-4000'}   // 区间：大于等于3000，小于4000
+                            {min: 7000, max: 7999, label: '7000-8000'},
+                            {min: 6000, max: 6999, label: '6000-7000'},
+                            {min: 5000, max: 5999, label: '5000-6000'},
+                            {min: 4000, max: 4999, label: '4000-5000'},
+                            {min: 2000, max: 3999, label: '2000-4000'}
                         ],
                         type: 'piecewise',
                         orient: 'horizontal',
