--- a/apps/blog/templates/blog/health.html
+++ b/apps/blog/templates/blog/health.html
@@ -83,17 +83,17 @@
                             '#ea7ccc',
                             '#5a6fc0',
                             '#85bedb',
-                            '#749f83',
-                            '#9eca7f'
+                            '#9eca7f',
+                            '#749f83'
                         ],
                         textStyle: {color: echartsTheme.titleColor},
                         pieces: [
-                            {min: 8000, max: 9999, label: '8000-10000'},
-                            {min: 7000, max: 7999, label: '7000-8000'},
-                            {min: 6000, max: 6999, label: '6000-7000'},
-                            {min: 5000, max: 5999, label: '5000-6000'},
-                            {min: 4000, max: 4999, label: '4000-5000'},
-                            {min: 2000, max: 3999, label: '2000-4000'}
+                            {min: 8000, max: 9999, label: '8000-9999'},
+                            {min: 7000, max: 7999, label: '7000-7999'},
+                            {min: 6000, max: 6999, label: '6000-6999'},
+                            {min: 5000, max: 5999, label: '5000-5999'},
+                            {min: 3000, max: 4999, label: '3000-4999'},
+                            {min: 2000, max: 2999, label: '2000-2999'}
                         ],
                         type: 'piecewise',
                         orient: 'horizontal',
