--- a/apps/oauth/templates/oauth/tags/user_avatar.html
+++ b/apps/oauth/templates/oauth/tags/user_avatar.html
@@ -4,7 +4,8 @@
     <img class="avatar" src="{{ user.avatar.url }}" alt="{{ user }}-自定义图像">
 {% elif user.socialaccount_set.exists %}
     {% if ".sinaimg.cn" in user.socialaccount_set.all.0.get_avatar_url %}
-        <img class="avatar" src="{{ user.avatar.url }}" alt="{{ user }}-第三方图像">
+        {% avatar_media_to_static user.avatar.url as static_avatar_url %}
+        <img class="avatar" src="{{ static_avatar_url }}" alt="{{ user }}-默认图像">
     {% else %}
         <img class="avatar" src="{% http_to_https user.socialaccount_set.all.0.get_avatar_url %}" alt="{{ user }}-第三方图像">
     {% endif %}
