--- a/apps/blog/templates/blog/health.html
+++ b/apps/blog/templates/blog/health.html
@@ -79,21 +79,21 @@
                     },
                     visualMap: {
                         color: [
+                            '#de6e6a',
                             '#9a60b4',
                             '#ea7ccc',
                             '#5a6fc0',
                             '#85bedb',
-                            '#749f83',
                             '#9eca7f',
                         ],
                         textStyle: {color: echartsTheme.titleColor},
                         pieces: [
+                            {min: 10000, label: '10000+'},
                             {min: 8000, max: 9999, label: '8000-9999'},
                             {min: 7000, max: 7999, label: '7000-7999'},
                             {min: 6000, max: 6999, label: '6000-6999'},
                             {min: 5000, max: 5999, label: '5000-5999'},
-                            {min: 4000, max: 4999, label: '4000-4999'},
-                            {min: 3000, max: 3999, label: '3000-3999'}
+                            {min: 3000, max: 4999, label: '3000-4999'}
                         ],
                         type: 'piecewise',
                         orient: 'horizontal',
