--- a/apps/blog/templates/blog/health.html
+++ b/apps/blog/templates/blog/health.html
@@ -2,12 +2,12 @@
 {% load static blog_tags %}
 {% load health %}
 
-{% block head_title %}健康看板，慢跑数据{% endblock %}
+{% block head_title %}运动看板，慢跑数据{% endblock %}
 
 {% block metas %}
     <meta name="description"
           content="本网站是一个采用django+bootstrap4搭建的个人博客，本着学习和分享的精神，博客项目开源，源代码可以到我的Github中查看，网站建站历程可以查看页面Timeline内容。">
-    <meta name="keywords" content="dashboard,看板,慢跑,五公里跑,心率,步频">
+    <meta name="keywords" content="dashboard,运动看板,慢跑,五公里跑,十公里跑,心率,步频">
 {% endblock %}
 
 {% block top-file %}
