--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -57,7 +57,7 @@
                     <a class="dropdown-item pl-3" href="{{ monitor_demo_url }}"><i
                                     class="fa fa-fw fa-tachometer text-info mr-2"></i>监控Demo</a>
                     <a class="dropdown-item pl-3" href="{{ health_url }}"><i
-                                    class="fa fa-fw fa-street-view text-info mr-2"></i>健康看板</a>
+                                    class="fa fa-fw fa-street-view text-info mr-2"></i>运动看板</a>
                     <a class="dropdown-item pl-3" href="{{ portinfo_url }}"><i
                                     class="fa fa-fw fa-bullseye text-info mr-2"></i>端口大全</a>
                 </div>
