--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -132,7 +132,7 @@
         <p class="mb-0">
             <a href="http://beian.miit.gov.cn/" target="_blank">{{ beian }}</a>
             {% if cnzz_protocol %}|&nbsp;{{ cnzz_protocol|safe }}{% endif %}
-            <span class="with-love"><i class="fa fa-heart"></i></span>
+            <span class="with-love"><i class="fa fa-heartbeat"></i></span>
             {% with web_update_time="" %}
                 <span id="web-day"
                         {% if web_update_time %}
