--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="referrer" content="origin">
     <!-- TDK and ICO -->
-    <title>{% block head_title %}{% endblock %}_{{ site_end_title }}</title>
+    <title>{% block head_title %}{% endblock %}_{{ site_end_title }}_编程笔记</title>
     {% block metas %}
         <meta name="description" content="{{ site_description }}">
         <meta name="keywords" content="{{ site_keywords }}">
