--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -133,9 +133,9 @@
                 <li class="nav-item mr-2">
                     <a class="nav-link py-md-3" href="{% url 'account_login' %}?next={{ request.path }}">登录</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link py-md-3" href="{% url 'account_signup' %}?next={{ request.path }}">注册</a>
-                </li>
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link py-md-3" href="{% url 'account_signup' %}?next={{ request.path }}">注册</a>#}
+{#                </li>#}
             {% endif %}
         </ul>
     </div>
