--- a/apps/tool/templates/tool/tags/tool_list.html
+++ b/apps/tool/templates/tool/tags/tool_list.html
@@ -5,7 +5,7 @@
     {% get_toollist_by_key as tool_list %}
     <div class="card border-0 rounded-6 px-3 mb-2 mb-md-3 tool-cate">
         <div class="card-header bg-white px-0">
-            <strong><i class="fa fa-trophy mr-2 f-17"></i>自定义工具</strong>
+            <strong><i class="fa fa-trophy mr-2 f-17"></i>本站工具</strong>
         </div>
         <div class="card-body px-0 py-3">
             <div class="tool-list">
