feat: 跑量支持按照年来显示，URL中传入年份的字段即可

--- a/apps/blog/templates/blog/health.html
+++ b/apps/blog/templates/blog/health.html
@@ -49,7 +49,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="mb-3" id="year_data_box" style="width: 100%;height:320px;"></div>
-            {% get_year_data as year_data %}
+            {% get_year_data year as year_data %}
             <div id="year_data_data"
                  style="display: none;">{{ year_data|json_script:"year_data" }}</div>
             <script type="text/javascript">
