--- a/apps/blog/templates/blog/health.html
+++ b/apps/blog/templates/blog/health.html
@@ -47,6 +47,11 @@
 
 {% block base_content %}
     <div class="container">
+        <div class="row justify-content-center mb-2">
+            {% for y in year_list %}
+                <div class="mr-3"><a href="?year={{ y }}">{{ y }}</a></div>
+            {% endfor %}
+        </div>
         <div class="row justify-content-center">
             <div class="mb-3" id="year_data_box" style="width: 100%;height:320px;"></div>
             {% get_year_data year as year_data %}
