feat: 跑量支持按照年来显示，URL中传入年份的字段即可

--- a/apps/blog/templates/blog/health.html
+++ b/apps/blog/templates/blog/health.html
@@ -49,7 +49,7 @@
     <div class="container">
         <div class="row justify-content-center mb-2">
             {% for y in year_list %}
-                <div class="mr-3"><a href="?year={{ y }}">{{ y }}</a></div>
+                <div class="mx-2"><a href="?year={{ y }}">{{ y }}</a></div>
             {% endfor %}
         </div>
         <div class="row justify-content-center">
