--- a/apps/blog/templates/blog/health.html
+++ b/apps/blog/templates/blog/health.html
@@ -49,12 +49,12 @@
     <div class="container">
         <div class="row justify-content-center mb-2">
             {% for y in year_list %}
-                <div class="mx-2"><a href="?year={{ y }}">{{ y }}</a></div>
+                <div class="mx-2 {% if current_year == y %}text-primary font-weight-bold{% endif %}"><a href="?year={{ y }}">{{ y }}</a></div>
             {% endfor %}
         </div>
         <div class="row justify-content-center">
             <div class="mb-3" id="year_data_box" style="width: 100%;height:320px;"></div>
-            {% get_year_data year as year_data %}
+            {% get_year_data current_year as year_data %}
             <div id="year_data_data"
                  style="display: none;">{{ year_data|json_script:"year_data" }}</div>
             <script type="text/javascript">
