--- a/templates/search/blog/search.html
+++ b/templates/search/blog/search.html
@@ -58,7 +58,7 @@
                                 </div>
                             </div>
                         {% empty %}
-                            <div class="p-3 mt-3 bg-white"><p>暂时没有文章!</p></div>
+                            <div class="p-3 mt-3 article-block"><p>暂时没有文章!</p></div>
                         {% endfor %}
                     </div>
                 {% endif %}
